tests/machine/x/pascal/group_by_multi_join.error
line: 154
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/TestPascalCompiler_VMValid_Goldengroup_by_multi_join942037008/001/main.pas
main.pas(102,18) Error: identifier idents no member "id"
main.pas(102,26) Error: identifier idents no member "supplier"
main.pas(105,20) Error: identifier idents no member "id"
main.pas(105,27) Error: identifier idents no member "nation"
main.pas(146,35) Error: Illegal qualifier
main.pas(146,17) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crcE41905E8", expected "{Open} Array Of Pointer"
main.pas(144,9) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "LongInt"
main.pas(20,17) Error: Can't read or write variables of this type
main.pas(154) Fatal: There were 8 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

 152:   specialize _printList<specialize TFPGMap<string, Variant>>(grouped);
 153: end.
 154: 
